--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <p>
-            <s>Lorem</s> <strong>dolor sit amet</strong> <em>consectetur adipisicing</em> elit.<br />
-            <u>Odio blanditiis</u> officia sint eos animi dicta dolorem illum sunt, eius vel debitis,<br />
+            <s>Lorem</s> <strong>dolor sit amet</strong> <em>consectetur adipisicing</em> elit.<br>
+            <u>Odio blanditiis</u> officia sint eos animi dicta dolorem illum sunt, eius vel debitis,<br>
             nulla laboriosam excepturi minus veniam molestias minima voluptas modi.
         </p>
         <div style="background-color: lightblue; color: blueviolet; font-size: 40pt;">Texto</div>
