--- a/style/example1.html
+++ b/style/example1.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Exemplo 1: <b>Texto exemplo</b></p>
-    <p>Exemplo 2: <strong>Texto exemplo</strong>
+    <p>Exemplo 1: <i><b>Texto exemplo</b></i></p>
+    <p>Exemplo 2: <strong><b>Texto exemplo</b></strong></p>
     <p>Exemplo 3: <i>Texto exemplo</i></p>
     <p>Exemplo 4: <em>Texto exemplo</em></p>
     <p>Exemplo 5: <mark>Texto exemplo</mark></p>
