--- a/css/examples/example1.html
+++ b/css/examples/example1.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 1 - CSS</title>
+    <link rel="stylesheet" href="styles/reset.css">
+     <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
     <link rel="stylesheet" href="styles/example1.css">
 </head>
 <body>
-    <div class="bg1">&nbsp;</div>
+    <div class="bg1">
+        <p>Lorem <abbr title="Instituto Federal do Ceará">IFCE</abbr> ipsum dolor sit amet consectetur adipisicing elit. Dolorem quasi, repellat cupiditate consequuntur ab voluptas fugiat. Excepturi ad alias nam optio nihil odio labore recusandae, error dolor provident laborum iusto.</p>
+    </div>
     <div class="bg2">&nbsp;</div>
 </body>
 </html>
